--- a/style.css
+++ b/style.css
@@ -18,6 +18,43 @@ img{
 	border: none;
 }
 
+
+/** Css do rss de noticias **/
+
+.rssDiv{
+    float: left;
+    padding-right: 35px;
+	}
+
+.feedEkList{
+	width:244px; 
+	list-style:none outside none;
+	background-color:#FFFFFF; 
+	border:1px solid #D3CAD7; 
+	color:#3E3E3E;
+	margin-top: 39px;
+}
+.feedEkList li{
+	border-bottom:1px solid #D3CAD7; 
+	padding:5px;
+}
+.feedEkList li:last-child{
+	border-bottom:none;
+}
+.itemTitle a{
+	text-decoration:none 
+}
+.itemTitle a:hover{ 
+	text-decoration:underline 
+}
+.itemDate{
+	font-size:11px;color:#AAAAAA;
+} 
+
+/** Fecha css do rss de noticias **/
+
+
+
 /** Container **/
 
 #container{
