--- a/style.css
+++ b/style.css
@@ -164,26 +164,19 @@ footer li a:hover{
 	height: 142px;
 	border-top: groove 4px #65A745;
 	background:#F1F2F4;
-	margin-top: 40px;
+	margin-top: 5px;
 } 
-
-#container-jogos p {
-	font-size: 10px;
-	font-family: arial,verdana,sans-serif;
-	color: #044B79;
-	margin: 5px 0 10px 5px;
-}
 
 #lista-jogos {
 	width: 246px;
 	height: 70px;
+	margin-top: 20px;
 	
 }
 
 #lista-jogos ul {
-	width: 246px;
 	height: 70px;
-	margin-left: 30px;
+	margin-left: 39px;
 }
 
 
@@ -196,14 +189,6 @@ footer li a:hover{
 	padding: 0 10px;
 }
 	
-.resultado-jogos {
-	padding: 0 10px;
-	font-family: arial,verdana,sans-serif;
-	font-size: 12px;
-	
-	color: #004588;
-
-}
 }
 #descricao-jogos {
 	width: 240px;
@@ -211,5 +196,29 @@ footer li a:hover{
 	
 }
 
+.resultado-jogos {
+	padding: 0 10px;
+	font-family: arial,verdana,sans-serif;
+	font-size: 12px;
+	color: #004588;
+	font-weight: bold;
+    margin-top: 22px;
+}
+.proximo{
+	font-size: 10px;
+	font-family: arial,verdana,sans-serif;
+	color: #044B79;
+	margin: 50px 0 10px 5px;
+}
+.data-local {
+	font-size: 10px;
+	font-family: arial,verdana,sans-serif;
+	color: #044B79;
+	text-align: center;
 
+}
 
+.bloco {
+	height: 45px;
+	background: #fff;
+}
