--- a/style.css
+++ b/style.css
@@ -19,13 +19,25 @@ img{
 }
 
 td {
+	width: 15px;
 	font-family: arial, verdana, sans-serif;
 	font-size: 11px;
 	color: #65A745;
+	text-align: center;
+
 }
+
+
 
 td img {
    margin-left: 5px;
+}
+
+.claro{
+	background: #FFF;
+}
+.esc {
+	background: #DDDDDD;
 }
 
 /** Css do rss de noticias **/
@@ -248,9 +260,53 @@ text-align: center;
 
 #container-grupo{
 	width: 246px;
-	height: 142px;
+	height: 130px;
 	border-top: groove 4px #65A745;
 	background:#F1F2F4;
 	margin-top: 5px;
 } 
+
+
+/** Container - Equipes **/
+
+#container-equipe{
+	width: 246px;
+	height: 100%;
+	border-top: groove 4px #65A745;
+	background:#F1F2F4;
+	margin-top: 5px;
+} 
+
+#bloco{
+	width: 246px;
+	height: 16px;
+	background: #DDDDDD;
+	margin: 10px 0;
+
+}
+
+#bandeira {
+	 width: 22px;
+	 height: 16px;
+	 margin-right: 15px;
+	 float: left;
+
+}
+
+#descricao-selecao {
+	width: 180px;
+	font-size: 10px;
+	font-family: arial,verdana,sans-serif;
+	color: #487832;
+	float: left;
+
+}
+
+#veja-mais {
+	font-size: 10px;
+	font-family: arial,verdana,sans-serif;
+	font-weight: bold;
+	color: #487832;
+
+}
 
